@@ -1,16 +1,16 @@
 package com.vti.group1.shopapi.controller;
 
-import com.vti.group1.shopapi.entity.Menu;
-import com.vti.group1.shopapi.entity.Product;
-import com.vti.group1.shopapi.repository.MenuRepository;
-import lombok.RequiredArgsConstructor;
+import java.util.List;
+
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Collections;
-import java.util.List;
+import com.vti.group1.shopapi.entity.Menu;
+import com.vti.group1.shopapi.repository.MenuRepository;
+
+import lombok.RequiredArgsConstructor;
 
 @RestController
 @RequestMapping("/api/v1/menus")
@@ -21,6 +21,6 @@ public class MenuController {
     @GetMapping()
     public ResponseEntity<List<Menu>> getAllProducts() {
         List<Menu> menus = menuRepository.findAll();
-        return ResponseEntity.ok(menus.isEmpty() ? Collections.emptyList() : menus);
+        return ResponseEntity.ok(menus.isEmpty() ? List.of() : menus);
     }
 }
